# sun_ray

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  LICENSE  README.md  format_all.sh  install.md
.github/workflows/: build_cmake.yml
apps/: CMakeLists.txt
apps/bullet/: CMakeLists.txt  main.cpp
apps/clock/: CMakeLists.txt  main.cpp
apps/scene/: CMakeLists.txt  main.cpp
apps/silhouette/: CMakeLists.txt  main.cpp
apps/sphere/: CMakeLists.txt  main.cpp
cmake/: clang_tidy.cmake  cppcheck.cmake  fetch_catch2.cmake  fetch_date.cmake  fetch_fmt.cmake  fetch_stb.cmake
samples/: README.md  bouncing.wsl  bullet.wsl  clock.wsl  cover_image.wsl  fibonacci.wsl  fresnel.wsl  hello_world.wsl  make_movie.sh  mandelbrot.wsl  reflect-refract.wsl  reflective_sphere.wsl  sample_1.wsl  sample_10.wsl  sample_2.wsl  sample_3.wsl  sample_4.wsl  sample_5.wsl  sample_6.wsl  sample_7.wsl  sample_8.wsl  sample_9.wsl  samples.md  scene.wsl  scene_10.wsl  scene_11.wsl  scene_12.wsl  scene_7.wsl  scene_8.wsl  scene_9.wsl  sphere.wsl  sphere_madness.wsl
src/: CMakeLists.txt  version.h.in
src/sun_ray/: CMakeLists.txt  application.h  main.cpp  options.h
sun_ray/: canvas_file_writer.h  canvas_png_writer.h  canvas_ppm3_writer.h  canvas_ppm6_writer.h  canvas_writer.h  image.h  init.h
sun_ray/feature/: camera.h  canvas.h  checker_pattern.h  color.h  cone.h  cube.h  cylinder.h  disk.h  gradient_pattern.h  intersection.h  intersection_state.h  light.h  material.h  math_helper.h  matrix.h  object.h  pattern.h  plane.h  ray.h  ring_pattern.h  shape.h  sphere.h  stripe_pattern.h  transformation.h  triangle.h  tuple.h  world.h
sun_ray/script/: ast.h  build_in_functions.h  class.h  diagnostic_message_handler.h  engine.h  format_helper.h  function_object.h  function_registry.h  function_traits.h  location.h  meta_class.h  meta_class_fwd.h  name_mangler.h  parser.h  scanner.h  stack.h  stack_machine.h  stream_reader.h  string_helper.h  symboltable.h  token.h  types.h
sun_ray/script/objects/: camera.h  canvas.h  checker_pattern.h  color.h  cone.h  cube.h  cylinder.h  disk.h  gradient_pattern.h  light.h  material.h  object.h  plane.h  point.h  ring_pattern.h  shape.h  sphere.h  stripe_pattern.h  triangle.h  vector.h  world.h
sun_ray/script/shapes/: camera.h  canvas.h  checker_pattern.h  cone.h  cube.h  cylinder.h  disk.h  gradient_pattern.h  light.h  material.h  measurement.h  pattern.h  plane.h  point.h  ring_pattern.h  shape.h  sphere.h  stripe_pattern.h  triangle.h  world.h
sun_ray/script/visitor/: dot_dump_visitor.h  dump_visitor.h  stack_machine_visitor.h  validation_visitor.h
test/: CMakeLists.txt  application_test.cpp  canvas_file_writer_test.cpp  canvas_writer_test.cpp  helper_test.cpp  main.cpp  options_test.cpp  temporary_directory.h
test/feature/: camera_test.cpp  canvas_test.cpp  color_test.cpp  cone_test.cpp  cube_test.cpp  cylinder_test.cpp  disk_test.cpp  intersect_test.cpp  intersection_state_test.cpp  light_test.cpp  material_test.cpp  matrix_test.cpp  object_test.cpp  pattern_test.cpp  plane_test.cpp  ray_test.cpp  shape_test.cpp  sphere_test.cpp  transformation_test.cpp  triangle_test.cpp  tuple_test.cpp  world_test.cpp
test/script/: camera_test.cpp  canvas_test.cpp  checker_pattern_test.cpp  color_test.cpp  cone_test.cpp  cube_test.cpp  cylinder_test.cpp  diagnostic_message_test.cpp  disk_test.cpp  dump_visitor_test.cpp  engine_test.cpp  function_object_test.cpp  function_registry_test.cpp  function_test.cpp  gradient_pattern_test.cpp  language_test.cpp  light_test.cpp  location_test.cpp  material_test.cpp  measurement_test.cpp  meta_class_test.cpp  name_mangler_test.cpp  parser_test.cpp  plane_test.cpp  point_test.cpp  ring_pattern_test.cpp  scanner_test.cpp  sphere_test.cpp  stack_machine_test.cpp  stack_machine_visitor_test.cpp  stack_test.cpp  stream_reader_test.cpp  string_helper_test.cpp  stripe_pattern_test.cpp  token_test.cpp  triangle_test.cpp  types_test.cpp  vector_test.cpp  world_test.cpp
